# tg-bot-volleyball

./: .gitignore  CMakeLists.txt  README.md  bld.bat  bld.sh  default_user.json  event_template.txt  events.json  run.bat  run.sh  users.json
include/all/: MASBot.h  UI.h  modules.h
include/all/UI/: Button.h  Menu.h  User.h
include/all/UI/volleyball/: Events.h
include/all/modules/: Calculator.h  Dater.h  DayOf.h  Predictor.h  URLParser.h
include/all/tools/: JsonProc.h  Timing.h
src/: MASBot.cpp  main.cpp
src/UI/: Button.cpp  Menu.cpp  User.cpp
src/UI/volleyball/: Events.cpp
src/modules/: Dater.cpp  DayOf.cpp  Predictor.cpp  URLParser.cpp
src/modules/Calculator/: CMakeLists.txt  Calculator.cpp  test.cpp
src/structures/CharTree/: CharTree.cpp  CharTree.h  test.cpp
src/tools/: JsonProc.cpp  Timing.cpp
